added recent projects + edited portfolio section

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -179,14 +179,14 @@ header .nav-contact li a:hover {
     text-shadow: none;
 }
 
-ul {
+header ul {
     list-style: none;
     display: flex;
     flex-direction: column;
 }
 
 
-ul li i {
+header ul li i {
     margin-right: 5px;
 }
 
@@ -417,12 +417,91 @@ h3.my-profession
     border-radius: 10px;
     overflow: hidden;
     cursor: pointer;
+    position: relative;
+    height: 100%;
 }
 
 .portfolio .portfolio-item-inner .portfolio-img img
 {
     width: 100%;
-    display: block;
+    overflow: hidden;
+    position: relative;
+}
+
+.portfolio .portfolio-item-inner  img
+{
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+}
+
+.portfolio .portfolio-overlay {
+    background-color: #2a2a2a;
+    border-radius: 3px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    opacity: 0;
+    visibility: hidden;
+    transition: all .3s;
+}
+
+.portfolio .portfolio-item .portfolio-item-inner ul.portfolio-icons {
+    position: absolute;
+    z-index: 11;
+    top: 48%;
+    left: 49.8%;
+    transform: translate(-50%, -45%);
+    width: 100%;
+    transition: all .5s;
+    opacity: 0;
+    visibility: hidden;
+    margin: 0px;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .portfolio .portfolio-item .portfolio-item-inner ul.portfolio-icons li {
+    display: inline-block;
+    margin: 0px 10px;
+  }
+  
+  .portfolio .portfolio-item .portfolio-item-inner ul.portfolio-icons li a {
+    width: 45px;
+    height: 45px;
+    background-color: rgb(255, 255, 255);
+    color: #2a2a2a;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 40px;
+    display: inline-block;
+    transition: all .5s;
+  }
+
+  .portfolio .portfolio-item .portfolio-item-inner ul.portfolio-icons li a:hover {
+    background-color: black;
+  }
+  .portfolio .portfolio-item .portfolio-item-inner ul.portfolio-icons li a:hover i {
+    color: white;
+  }
+
+  .portfolio .portfolio-item .portfolio-item-inner ul.portfolio-icons li a i {
+    font-size: 25px;
+    padding-top: 9px;
+  }
+
+.portfolio .portfolio-item-inner:hover .portfolio-overlay {
+    opacity: .99;
+    visibility: visible;
+}
+
+
+.portfolio .portfolio-item-inner:hover ul.portfolio-icons {
+    opacity: 1;
+    visibility: visible;
 }
 
 .proj-container .portfolio-item {
@@ -951,6 +1030,10 @@ h3.my-profession
     }
     .row-social-contact {
         margin-left: 65px;
+    }
+    header .nav li a {
+        font-size: 25px;
+        margin: 33px 0px;
     }
 }
 
