fixed mobile  bugs

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -394,6 +394,7 @@ h3.my-profession
     z-index: 10;
     font-family: 'Poppins', sans-serif;
     transition: opacity .4s ease-out;
+    overflow: hidden;
 }
 .to-projects-wrap {
     position: absolute;
@@ -2170,6 +2171,7 @@ color: black;
     }
     .project-h, .banner-h {
         font-size: 4.3em;
+        padding-top: 30px;
     }
     .proj-exit {
         left: 46.5%;
