--- a/assets/styles.css
+++ b/assets/styles.css
@@ -466,6 +466,12 @@ h3.my-profession
     100% {margin-top:0;}
 }
 
+@keyframes movemob {
+    0% {margin-top:0;}
+    50% {margin-top:25px;}
+    100% {margin-top:0;}
+}
+
 /* home end */
 
 /* portfolio start */
@@ -2077,7 +2083,7 @@ color: black;
     }
     .to-projects i {
         opacity: 1;
-        animation: move 1.1s infinite ease-in-out;
+        animation: movemob 1.1s infinite ease-in-out;
     }
 }
 
