--- a/src/index.css
+++ b/src/index.css
@@ -1406,83 +1406,15 @@ color: black;
 /* Thank you section end */
 
 /* Pre Loader section Start */
-.preloader {
-    overflow: hidden;
-    background-color: var(--mp-yellow);
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    position: fixed;
-    z-index: 99999;
-    color: var(--text-white-50);
-}
-  
-.preloader .jumper {
-    left: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    display: block;
+.pre-loader {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10000;
+    background-color: var(--bg-black-900);
     position: absolute;
-    margin: auto;
-    width: 50px;
-    height: 50px;
-}
-  
-.preloader .jumper > div {
-    background-color: var(--text-white-50);
-    width: 10px;
-    height: 10px;
-    border-radius: 100%;
-    -webkit-animation-fill-mode: both;
-    animation-fill-mode: both;
-    position: absolute;
-    opacity: 0;
-    width: 50px;
-    height: 50px;
-    -webkit-animation: jumper 1s 0s linear infinite;
-    animation: jumper 1s 0s linear infinite;
-}  
-
-.preloader .jumper > div:nth-child(2) {
-    -webkit-animation-delay: 0.33333s;
-    animation-delay: 0.33333s;
-}
-  
-.preloader .jumper > div:nth-child(3) {
-    -webkit-animation-delay: 0.66666s;
-    animation-delay: 0.66666s;
-}
-
-@-webkit-keyframes jumper {
-    0% {
-      opacity: 0;
-      -webkit-transform: scale(0);
-      transform: scale(0);
-    }
-    5% {
-      opacity: 1;
-    }
-    100% {
-      -webkit-transform: scale(1);
-      transform: scale(1);
-      opacity: 0;
-    }
-}
-  
-@keyframes jumper {
-    0% {
-      opacity: 0;
-      -webkit-transform: scale(0);
-      transform: scale(0);
-    }
-    5% {
-      opacity: 1;
-    }
-    100% {
-      opacity: 0;
-    }
 }
 /* Pre Loader Section end */
 
