--- a/src/index.css
+++ b/src/index.css
@@ -2053,6 +2053,7 @@ color: black;
     }
     .info-body3 ul {
         gap: 0px;
+        margin-bottom: 150px;
     }
     .proj-exit {
         left: 48%;
@@ -2065,7 +2066,7 @@ color: black;
         margin-top: -60px;
     }
     .info-body3 {
-        height: 75px;
+        height: 120px;
     }
     .info-imgs {
         margin-top: 95px;
@@ -2077,7 +2078,7 @@ color: black;
     .info-mobile-imgs {
         padding-top: 46px;
         margin-bottom: -18px;
-        padding-bottom: 80px;
+        padding-bottom: 100px;
     }
     .info-imgs2 {
         padding-top: 50px;
